[gd_scene load_steps=3 format=3 uid="uid://8fc7o84w6tqq"]

[ext_resource type="Script" path="res://components/segment_block.gd" id="1_78k2x"]

[sub_resource type="CylinderMesh" id="CylinderMesh_uih1f"]

[node name="SegmentBlock" type="Node3D"]
script = ExtResource("1_78k2x")

[node name="Core" type="MeshInstance3D" parent="."]
transform = Transform3D(3.479, 0, 0, 0, 18, 0, 0, 0, 3.479, 0, -18, 0)
mesh = SubResource("CylinderMesh_uih1f")

[node name="SegmentPoints" type="Node3D" parent="."]

[node name="Point1" type="Marker3D" parent="SegmentPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4, 0)

[node name="Point2" type="Marker3D" parent="SegmentPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -8, 0)

[node name="Point3" type="Marker3D" parent="SegmentPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -12, 0)

[node name="Point4" type="Marker3D" parent="SegmentPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -16, 0)

[node name="Point5" type="Marker3D" parent="SegmentPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -20, 0)

[node name="Point6" type="Marker3D" parent="SegmentPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -24, 0)

[node name="Point7" type="Marker3D" parent="SegmentPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -28, 0)

[node name="Point8" type="Marker3D" parent="SegmentPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -32, 0)

[node name="Point9" type="Marker3D" parent="SegmentPoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -36, 0)

[node name="NextPoint" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -36, 0)
